# cppbuild

./: .clangd  .ninja_deps  .ninja_log  CMakeLists.txt  CMakePresets.json  build.cxx  readme.md
.cursor/rules/: general.mdc
.github/workflows/: cmake-multi-platform.yml
android-project/: gradle.properties  settings.gradle
android-project/app/: build.gradle
android-project/gradle/: libs.versions.toml
build_cxx/: build.hxx  config.hxx  driver.hxx  emit.hxx  emit_ninja.hxx  errors.hxx  executor.hxx  expand.hxx  external.hxx  plan.hxx  portable.hxx  primitives.hxx  project.hxx  runtime.hxx  target.hxx  validate.hxx
cmake/: cpm-config.cmake
cmake/code_quality/: warnings-config.cmake
cmake/cpm/: sdl3-config.cmake  yaml-cpp-config.cmake
cmake/toolchains/: llvm_mingw.cmake  test_include_macos.cmake
scripts/: waydroid.sh
src/: sdl_main.cpp
src/examples/01_hello/: build.cxx  main.cpp
src/examples/02_static_lib/: build.cxx  main.cpp
src/examples/02_static_lib/include/: mathx.hpp
src/examples/03_shared_lib/: build.cxx  main.cpp
src/examples/04_unity_build/: a.cpp  b.cpp  build.cxx  c.cpp  main.cpp  parts.hpp
src/examples/05_glob_sources/: all.hpp  build.cxx  main.cpp  one.cpp  three.cpp  two.cpp
src/examples/06_nested_subdirs/: build.cxx
src/examples/07_custom_flags/: build.cxx  main.cpp
src/examples/08_sdl3/: build.cxx  main.cpp
src/examples/09_generate_and_postbuild/: build.cxx  main.cpp
src/examples/10_app_with_tests/: build.cxx
src/examples/11_runnables/: build.cxx  main.cpp  selftest.sh  test_basic.cpp
tests/: CMakeLists.txt
(+13 files in other folders)
